# Pedestrian-Trajectory-Prediction

./: .gitignore  README.md
data/: phase3_data_preproc.ipynb
exported/: tft_1111.onnx  tft_1111_UE.onnx
model/: loss_baseline.npy  loss_state.npy
model/TFT_logs/lightning_logs/version_0/: events.out.tfevents.1717747079.shaoze-ThinkPad-P1-Gen-5.208953.1  hparams.yaml
notebook/: Generate_features.ipynb  LSTM.ipynb  Lightgbm.ipynb  Plot_trajectory_static.ipynb  TFT.ipynb  TFT_DIT_Flow_0330.ipynb  TFT_Flowmatching.ipynb  TFT_Flowmatching_2.ipynb  TFT_Flowmatching_EDM.ipynb  TFT_Flowmatching_meanflow.ipynb  TFT_Flowmatching_mlp.ipynb  TFT_Flowmatching_onestep_baseline.ipynb  TFT_Flowmatching_teacher.ipynb  TFT_integrated.ipynb  TFT_parallel_decode.ipynb  TFT_parallel_decode_pretrain.ipynb  TFT_scratch.ipynb  TFT_scratch_UE.ipynb  archived_model.ipynb  baseline_cvm.ipynb  baseline_lstm.ipynb  bev_pred.ipynb  data_to_features.ipynb  evaluation.ipynb  interact_plot.ipynb  model_eval.ipynb  pred_model.ipynb  pred_model_state.ipynb  state_pred.ipynb  state_predicton_models.ipynb  visualization.ipynb
pipeline/: CMakeLists.txt  data_processor.ipynb  main.cpp  run.sh
pipeline/demo/: 0.csv
pipeline/libtorch/: README.md
src/: BaseLSTM.py  ChangeFrameRate.py  CombinedFAMRunner_atStation_MLE.py  DataAug.py  DiT.py  FAM.py  FAMRunner.py  FeatureGenerator.py  FeatureGenerator_shawn.py  MyDataset.py  PlotState.py  TFT_Flowmatching.py  TemporalFusionTransformer.py  ToPickle.py  TraPredModel.py  TraPredModel_new.py  VQVAE.py  __init__.py  constant.py  utils.py
(+4 files in other folders)
